k8s/client/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
  namespace: default
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      volumes:
        - name: pki-secret-volume
          secret:
            secretName: pki-secret
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: client
          imagePullPolicy: Always
          image: monarkastoreapirn.azurecr.io/monarka-client:latest
          args:
            - pnpm
            - dev
            - --experimental-https
            - --experimental-https-key /etc/ssl/certs/tls.key
            - --experimental-https-cert /etc/ssl/certs/tls.crt
          volumeMounts:
            - name: pki-secret-volume
              mountPath: '/etc/ssl/certs'
              readOnly: true
          ports:
            - name: https
              containerPort: 3000
              protocol: TCP
