k8s/client/client.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
  namespace: default
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3000
  selector:
    app: client
  type: ClusterIP
